ngrx root metido

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
-<div>
-  <a [routerLink]="['/estado/1']">Estado 1</a>
-  <a [routerLink]="['/estado/2']">Estado 2</a>
-  <a [routerLink]="['/estado/3']">Estado 3</a>
+<div> Home
+  <div *ngFor="let e of estados">
+    <a [routerLink]="['/estado/' + e]">Estado {{e}}</a>
+  </div>
 </div>
