--- a/src/app/estado/estado.component.html
+++ b/src/app/estado/estado.component.html
@@ -1,5 +1,6 @@
 <div>
-  <a [routerLink]="['/lanzamiento/1']">lanzamiento 1</a>
-  <a [routerLink]="['/lanzamiento/2']">lanzamiento 2</a>
-  <a [routerLink]="['/lanzamiento/3']">lanzamiento 3</a>
+  <app-estado-detalle [id]="id"></app-estado-detalle>
+  <div *ngFor="let l of lanzamientos">
+    <a [routerLink]="['/lanzamiento/' + l]">lanzamiento {{l}}</a>
+  </div>
 </div>
