--- a/src/app/barra/barra.component.html
+++ b/src/app/barra/barra.component.html
@@ -1,1 +1,3 @@
-<span>Isa v.1</span> <a [routerLink]="['/']">Isa</a>
+<span>{{ (isa$ | async).opcion}}</span>
+<span>{{ (isa$ | async).info}}</span>
+<span><a [routerLink]="['/']">Isa v.1</a></span>
